ZGC: ZBarrierSetC2::clone_at_expansion fails with "Guard against surprises" assert

XMLWordPrintable

    • b27
    • 17
    • b10
    • Verified

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (workspace/open/src/hotspot/share/gc/z/c2/zBarrierSetC2.cpp:278), pid=391777, tid=391820
        # assert(StressReflectiveCode) failed: Guard against surprises
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+6) (fastdebug build 18-ea+6-191)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+6-191, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1a0eaec] ZBarrierSetC2::clone_at_expansion(PhaseMacroExpand*, ArrayCopyNode*) const+0xa4c
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /oracle/jdk/open/JTwork/scratch/core.391777)
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        Current CompileTask:
        C2: 871 21 !b 4 jdk.internal.reflect.GeneratedMethodAccessor1::invoke (61 bytes)

        Stack: [0x00007f362d436000,0x00007f362d537000], sp=0x00007f362d532350, free space=1008k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1a0eaec] ZBarrierSetC2::clone_at_expansion(PhaseMacroExpand*, ArrayCopyNode*) const+0xa4c
        V [libjvm.so+0x13356a6] PhaseMacroExpand::expand_arraycopy_node(ArrayCopyNode*)+0x206
        V [libjvm.so+0x1325f3d] PhaseMacroExpand::expand_macro_nodes()+0xe5d
        V [libjvm.so+0xa0d7b5] Compile::Optimize()+0x16c5
        V [libjvm.so+0xa0f168] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1618
        V [libjvm.so+0x82c316] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
        V [libjvm.so+0xa1fbe9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xef9
        V [libjvm.so+0xa20918] CompileBroker::compiler_thread_loop()+0x598
        V [libjvm.so+0x188af5c] JavaThread::thread_main_inner()+0x27c
        V [libjvm.so+0x1891700] Thread::call_run()+0x100
        V [libjvm.so+0x156f284] thread_native_entry(Thread*)+0x104


        This was introduced in JDK 17 by JDK-8268125.

          1. TestObjectClone.java
            3 kB
            Tobias Hartmann
          2. runtime_check.patch
            2 kB
            Tobias Hartmann

              Assignee:
              Tobias Hartmann
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: