8270098: ZGC: ZBarrierSetC2::clone_at_expansion fails with "Guard against surprises" assert

Reviewed-by: neliasso, kvn